--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,15 @@
   text-decoration: line-through;
 }
 
+main {
+  width: 500px;
+  margin: 0 auto;
+}
+
+h5 {
+  float: right;
+}
+
 li {
   margin-bottom: 9px !important;
   margin-left: 4px !important;
