--- a/css/style.scss
+++ b/css/style.scss
@@ -7,14 +7,11 @@ main {
   margin: 0 auto;
 }
 
-h5 {
-  float: right;
-}
-
-li {
+li.collection-item {
   margin-bottom: 9px !important;
   margin-left: 4px !important;
   text-align: center;
+  border-bottom: none;
 
   i.done {
     float: right;
@@ -25,6 +22,22 @@ li {
     float: right;
     color: #b90000;
   }
+
+}
+
+.hidden {
+  display: none;
+}
+
+.filter-active {
+  border: 1px solid #c8c8c8;
+  border-radius: 9px;
+  background-color: #ECEFEA !important;
+  padding: 2px 20px !important;
+}
+
+.filter {
+  display: inline-block;
 }
 
 .collection {
